package main

type P2PNetwork struct{}
